Remove dependency on preview features